--- a/back/package.json
+++ b/back/package.json
@@ -11,7 +11,8 @@
         "@prisma/client": "^5.0.0",
         "cors": "^2.8.5",
         "express": "^4.18.2",
-        "multer": "^1.4.5-lts.2"
+        "multer": "^1.4.5-lts.2",
+        "react-icons": "^5.5.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.0",
